build_log.txt
   Compiling rpatchur v0.3.0 (C:\Users\artur.vale\OneDrive - SISTEMA FIEPA\Documentos\Pessoal\github\rpatchur_v2\rpatchur)
   Compiling mkpatch v0.1.1 (C:\Users\artur.vale\OneDrive - SISTEMA FIEPA\Documentos\Pessoal\github\rpatchur_v2\mkpatch)
error[E0425]: cannot find value `NONE` in crate `embed_resource`
 --> rpatchur\build.rs:3:70
  |
3 |     embed_resource::compile("resources/rpatchur.rc", embed_resource::NONE);
  |                                                                      ^^^^ not found in `embed_resource`

error[E0061]: this function takes 1 argument but 2 arguments were supplied
   --> rpatchur\build.rs:3:5
    |
  3 |     embed_resource::compile("resources/rpatchur.rc", embed_resource::NONE);
    |     ^^^^^^^^^^^^^^^^^^^^^^^                          -------------------- unexpected argument #2
    |
note: function defined here
   --> C:\Users\artur.vale\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\embed-resource-1.8.0\src\lib.rs:162:8
    |
162 | pub fn compile<T: AsRef<Path>>(resource_file: T) {
    |        ^^^^^^^
help: remove the extra argument
    |
  3 -     embed_resource::compile("resources/rpatchur.rc", embed_resource::NONE);
  3 +     embed_resource::compile("resources/rpatchur.rc");
    |

Some errors have detailed explanations: E0061, E0425.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `rpatchur` (build script) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: linking with `x86_64-w64-mingw32-gcc` failed: exit code: 1
  |
  = note: "x86_64-w64-mingw32-gcc" "-fno-use-linker-plugin" "-Wl,--dynamicbase" "-Wl,--disable-auto-image-base" "-m64" "-Wl,--high-entropy-va" "<1 object files omitted>" "-Wl,-Bstatic" "C:\\Users\\ARTUR~1.VAL\\AppData\\Local\\Temp\\rustcEPld7Y/{libpanic_abort-e5c8aa26fc2c04c9,libwebview_sys-aa99f391de0c98b5,libtinyfiledialogs-f5992745dd05cc07,libwindows_sys-d8b77993343e5469,libstd-412f35739dfa5150,libobject-9d26f3efc9bab6a7,libmemchr-821e20e153e0717f,libaddr2line-35739ff5cefe579e,libgimli-1fd9be48a5a1fea1,libcfg_if-b0185674579f7e08,libwindows_targets-b1a9198ef68eff35,librustc_demangle-a5759f793c0a4397,libstd_detect-abe8e40555b44c01,libhashbrown-b8fc3f598d243379,librustc_std_workspace_alloc-41ca33ab5b6d1a67,libminiz_oxide-2538f1ef87068206,libadler2-514102c5fe7f7d44,libunwind-bb373c64ff85a92c,liblibc-074e5888e183aaa0,librustc_std_workspace_core-0711f97cc1d023fd,liballoc-3b2e2b2642f765b5,libcore-6018603b0a83ce5b}.rlib" "<sysroot>\\lib\\rustlib\\x86_64-pc-windows-gnu\\lib/libcompiler_builtins-*.rlib" "-Wl,-Bdynamic" "-lkernel32" "-lwinapi_advapi32" "-lwinapi_cfgmgr32" "-lwinapi_comctl32" "-lwinapi_dwmapi" "-lwinapi_fwpuclnt" "-lwinapi_gdi32" "-lwinapi_kernel32" "-lwinapi_msimg32" "-lwinapi_ntdll" "-lwinapi_opengl32" "-lwinapi_shell32" "-lwinapi_shlwapi" "-lwinapi_user32" "-lwinapi_uxtheme" "-lwinapi_winspool" "-lwinapi_ws2_32" "-lole32" "-lcomctl32" "-loleaut32" "-luuid" "-lgdi32" "-luser32" "-luser32" "-lcomdlg32" "-lole32" "-lshell32" "-lkernel32" "-lkernel32" "-lkernel32" "-lntdll" "-luserenv" "-lws2_32" "-ldbghelp" "-lgcc_eh" "-l:libpthread.a" "-lmsvcrt" "-lmingwex" "-lmingw32" "-lgcc" "-lmsvcrt" "-lmingwex" "-luser32" "-lkernel32" "-Wl,--nxcompat" "-L" "C:\\Users\\artur.vale\\OneDrive - SISTEMA FIEPA\\Documentos\\Pessoal\\github\\rpatchur_v2\\target\\release\\build\\tinyfiledialogs-ada32c6c3e02d7b5\\out" "-L" "C:\\Users\\artur.vale\\OneDrive - SISTEMA FIEPA\\Documentos\\Pessoal\\github\\rpatchur_v2\\target\\release\\build\\webview-sys-4a3082ed7dc75e33\\out" "-L" "C:\\Users\\artur.vale\\.cargo\\registry\\src\\index.crates.io-1949cf8c6b5b557f\\winapi-x86_64-pc-windows-gnu-0.4.0\\lib" "-o" "C:\\Users\\artur.vale\\OneDrive - SISTEMA FIEPA\\Documentos\\Pessoal\\github\\rpatchur_v2\\target\\release\\deps\\mkpatch-c728fcc12ce4da24.exe" "-Wl,--gc-sections" "-no-pie" "-Wl,-O1" "-Wl,--strip-debug" "-nodefaultlibs"
  = note: some arguments are omitted. use `--verbose` to show all linker arguments
  = note: C:/Users/artur.vale/scoop/apps/mingw/14.2.0-rt_v12-rev0/bin/../lib/gcc/x86_64-w64-mingw32/14.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\ARTUR~1.VAL\AppData\Local\Temp\rustcEPld7Y\libtinyfiledialogs-f5992745dd05cc07.rlib(dfaf9b5f75025898-tinyfiledialogs.o):tinyfiledialog:(.text$tinyfd_messageBoxW+0x1c): undefined reference to `SetProcessDpiAwareness'
          C:/Users/artur.vale/scoop/apps/mingw/14.2.0-rt_v12-rev0/bin/../lib/gcc/x86_64-w64-mingw32/14.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\ARTUR~1.VAL\AppData\Local\Temp\rustcEPld7Y\libtinyfiledialogs-f5992745dd05cc07.rlib(dfaf9b5f75025898-tinyfiledialogs.o):tinyfiledialog:(.text$tinyfd_messageBoxW+0x51): undefined reference to `SetProcessDpiAwareness'
          C:/Users/artur.vale/scoop/apps/mingw/14.2.0-rt_v12-rev0/bin/../lib/gcc/x86_64-w64-mingw32/14.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\ARTUR~1.VAL\AppData\Local\Temp\rustcEPld7Y\libtinyfiledialogs-f5992745dd05cc07.rlib(dfaf9b5f75025898-tinyfiledialogs.o):tinyfiledialog:(.text$tinyfd_messageBoxW+0x71): undefined reference to `SetProcessDpiAwareness'
          C:/Users/artur.vale/scoop/apps/mingw/14.2.0-rt_v12-rev0/bin/../lib/gcc/x86_64-w64-mingw32/14.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\ARTUR~1.VAL\AppData\Local\Temp\rustcEPld7Y\libtinyfiledialogs-f5992745dd05cc07.rlib(dfaf9b5f75025898-tinyfiledialogs.o):tinyfiledialog:(.text$messageBoxWinGui+0x26): undefined reference to `SetProcessDpiAwareness'
          C:/Users/artur.vale/scoop/apps/mingw/14.2.0-rt_v12-rev0/bin/../lib/gcc/x86_64-w64-mingw32/14.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\ARTUR~1.VAL\AppData\Local\Temp\rustcEPld7Y\libtinyfiledialogs-f5992745dd05cc07.rlib(dfaf9b5f75025898-tinyfiledialogs.o):tinyfiledialog:(.text$tinyfd_notifyPopupW+0x18): undefined reference to `SetProcessDpiAwareness'
          C:/Users/artur.vale/scoop/apps/mingw/14.2.0-rt_v12-rev0/bin/../lib/gcc/x86_64-w64-mingw32/14.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\ARTUR~1.VAL\AppData\Local\Temp\rustcEPld7Y\libtinyfiledialogs-f5992745dd05cc07.rlib(dfaf9b5f75025898-tinyfiledialogs.o):tinyfiledialog:(.text$tinyfd_notifyPopupW+0x4d): more undefined references to `SetProcessDpiAwareness' follow
          collect2.exe: error: ld returned 1 exit status
          
  = note: some `extern` functions couldn't be found; some native libraries may need to be installed or have their path specified
  = note: use the `-l` flag to specify native libraries to link
  = note: use the `cargo:rustc-link-lib` directive to specify the native libraries to link with Cargo (see https://doc.rust-lang.org/cargo/reference/build-scripts.html#rustc-link-lib)

error: could not compile `mkpatch` (bin "mkpatch") due to 1 previous error
